@@ -1,4 +1,5 @@
 2006-11-26  Don Allingham  <don@gramps-project.org>
+	* src/Merge/_MergePerson.py:  fixed check_for_child function to handle childrefs
 	* po/gramps.pot: updated
 
 2006-11-26  Alex Roitman  <shura@gramps-project.org>
